Fix grid on mobile

--- a/content/_assets/scss/layout/_root.scss
+++ b/content/_assets/scss/layout/_root.scss
@@ -3,10 +3,10 @@
     --grid-margin: minmax(var(--margin), 1fr);
 
     display: grid;
-    gap: var(--spacer);
+    row-gap: var(--spacer);
     grid-template-columns:
       [full-start] var(--grid-margin)
-      [main-start] minmax(0, var(--measure))
+      [main-start] minmax(12ch, var(--measure))
       [main-end] var(--grid-margin)
       [full-end];
     margin: 0;
@@ -15,6 +15,10 @@
     > * {
       grid-column: var(--body-column, main);
       margin-block: 0;
+    }
+
+    @media (max-width: 20em) {
+      overflow-wrap: break-word;
     }
   }
 }
